<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">GeoMania</string>
    <string name="title_home">Αρχική</string>
    <string name="title_dashboard">Προφίλ</string>
    <string name="hiding_the_map">Hiding the map</string>
    <string name="submit">Επιβεβαιωση</string>
    <string name="next_question">Επομενη ερωτηση</string>
    <string name="finish_quiz">Τελειωσε το quiz</string>
    <string name="congratulations">Συγχαρητήρια!</string>
    <string name="returnToMainPage">Επιστροφη στην επιλογή quiz</string>
    <string name="play">Παιξε</string>
    <string name="answer">Απάντηση</string>
    <string name="select_category">Επίλεξε κατηγορία</string>
    <string name="background">Εικόνα</string>
    <string name="correct_answer">Σωστή απάντηση:</string>
    <string name="player_icon">Εικόνα παίκτη</string>
    <string name="username">Όνομα χρήστη</string>
    <string name="level">Επίπεδο %d</string>
    <string name="experience">%d XP</string>
    <string name="icons">Εικονίδια</string>
    <string name="map_icon">Εικονίδιο χάρτη</string>
    <string name="earth_description">Εικόνα της Γης</string>
    <string name="badges">Εμβλήματα</string>
    <string name="back_button">Το κουμπί επιστροφής</string>
    <string name="backgrounds">Φόντα</string>
    <string name="no_internet_connection">Δεν υπάρχει πρόσβαση στο διαδίκτυο.</string>
    <string name="result_score">Το σκορ σου ήταν %s</string>
    <string name="You_failed">Δυστυχώς δεν κέρδισες</string>
    <string name="You_failed_3_questions">Απάντησες λάθος σε τρεις ερωτήσεις.</string>
</resources>